# AppDialog

./: .gitignore  Documentation.md  LICENSE.md  MIRACULOUS_TALES_OF_LADY_BUG_&_CAT_NOIR_S5_11.xlsx  NumbChucks_1.json  README.md  Takeo.py  debug_theme.py  guion.xlsx  install.txt  main.py  pyproject.toml  pytest.ini  recent_files.json  requirements.txt  script.xlsx  setup.py  shortcuts.json
Takeo/: main.py  script_optimizer_logic.py  takeo_mainwindow.py
docs/: 00_Context_Bank_Index.md  01_Project_Manifest.md  02_File_Tree_Map.md  03_Architecture_Patterns.md  04_Data_Schema.md  05_Agent_Guidelines.md  06_Stability_Log.md
guion_editor/: commands.py  constants.py  constants_logic.py  shortcuts.json
guion_editor/commands/: undo_commands.py
guion_editor/controllers/: table_controller.py
guion_editor/delegates/: custom_delegates.py  guion_delegate.py
guion_editor/managers/: menu_manager.py
guion_editor/models/: pandas_table_model.py  script_model.py
guion_editor/styles/: converter.css  main.css  table_styles.css  takeo_styles.css
guion_editor/utils/: dialog_utils.py  file_io_handler.py  guion_manager.py  paths.py  shortcut_manager.py  srt_processor.py  takeo_optimizer_logic.py  theme_manager.py
guion_editor/widgets/: __init__.py  cast_window.py  (+20 more)
tests/: test_dialog_utils.py  test_guion_manager_robustness.py
themes/: dark_ocean.json  dark_oled.json  dark_studio.json  default_dark.json  default_light.json  light_corporate.json  light_paper.json  light_sepia.json
xlsx_converter/: config.py  conversion_worker.py  main.py  main_window.py  utils.py
(+15 files in other folders)
